src/styles.css
@font-face {
    font-family: 'farmilia_-_personalregular';
    src: url('fonts/farmilia-personal-webfont.woff') format('woff2'),
         url('fonts/farmilia-personal-webfont.woff2') format('woff');
    font-weight: normal;
    font-style: normal;
}

:root {
    --main-color: #49D056;
    --secondary-color: #8C271E;
    --tertiary-color: #F1F2F3;
}

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Header */
.header {
    display: grid;
    grid-template-columns: 48px 1fr;
    gap: 4px;
    justify-content: left;
    padding: 8px;
    font-family: 'farmilia_-_personalregular', 'Courier New', Courier, monospace;
    background-color: var(--main-color);
    color: var(--secondary-color);
}

.header img {
    width: 32px;
    height: 32px;
    justify-self: center;
    align-self: center;
}

.header h1 {
    display: flex;
    align-items: center;
    font-size: 48px;
    padding: 4px;
    letter-spacing: 4px;
}

.header::selection {
    background-color: var(--secondary-color);
    color: var(--tertiary-color);
}

.hide {
    display: none;
}

/* Navbar */
.main {
    display: grid;
    grid-template-columns: minmax(150px, 1fr) 4fr;
}

.main nav {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 36px 1fr;
    gap: 4px;
    background-color: var(--secondary-color);
    color: #49D056;
    padding: 8px 8px 8px 2px;
}

.main nav h1 {
    font-family: 'farmilia_-_personalregular', 'Courier New', Courier, monospace;
    align-self: center;
    font-size: 36px;
}


.main nav button {
    cursor: pointer;
    background-color: transparent;
    width: 24px;
    height: 24px;
    align-self: center;
    justify-self: end;
    border: none;
}

.main nav button img:hover {
    border: 2px solid var(--main-color);
}

.main nav ul {
    font-family: 'Courier New', Courier, monospace;
    grid-area: -1 / 1 / -1 / -1;
    display: grid;
}

.main nav li {
    padding: 8px;
    cursor: pointer;
}

nav::selection {
    background-color: var(--tertiary-color);
    color: var(--secondary-color);
}

.main nav li:hover,
.selected {
    background-color: var(--main-color);
    color: var(--secondary-color);
    font-weight: 900;
}

